# tumex-svc-mailer-mrust1-2

./: .dockerignore  .gitignore  COPYRIGHT  Cargo.toml  Dockerfile  Makefile.toml  README.md  Rocket.toml  fleet.toml  rust-toolchain.toml
.cargo/: config.toml
src/: app_routes.rs  error_catcher.rs  main.rs  mongo.rs  routes.rs
src/auth/: auth0_claims.rs  auth0_keys.rs  mod.rs
src/fairings/: rate_limit.rs
src/guards/: auth.rs  mod.rs  rate_limit.rs
src/models/: message.rs
src/routes_mod/: del_msg.rs  get_msgs.rs  health.rs  mod.rs  msg_opacity.rs  read_message.rs  send_msg.rs
src/security/: mod.rs  rate_limit.rs  sanitizers.rs  sec_headers.rs
src/services/: main.rs
