[package]
name = "rust-mailer-api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.2.2", features = ["bson-chrono-0_4"] }
serde = { version = "1.0.137", features = ["derive"] }
regex = "1"
rocket = { version = "0.5.0-rc.2", features = ["json", "msgpack"] }
chrono = "0.4"
jsonwebtokens = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0.82"
tokio = "1.20.0"

[profile.release]
strip = true
lto = true
