[package]
name = "rust-mailer-api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.2.2", features = ["bson-chrono-0_4"] }
serde = { version = "1.0.137", features = ["derive"] }
regex = "1"
rocket = { version = "0.5.0-rc.2", features = ["json", "msgpack"] }
chrono = "0.4"
jsonwebtokens = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["tracing"] }
console-subscriber = "0.1.6"
ammonia = "3.2.0"
unicode-segmentation = "1.9.0"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }

[profile.release]
strip = true
lto = "fat"
debug = 0
opt-level = 3
codegen-units = 1
incremental = false

[profile.dev]
strip = false
opt-level = 0
debug = 2
lto = false
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 500
panic = "abort"
